# FastCert

./: .gitignore  pyproject.toml
src/fastcert/: __init__.py  cert_service.py  server.py
src/fastcert/routes/: certs.py  challenges.py  health.py  types.py
