[project]
name = "fastcert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "luozhouyang", email = "zhouyang.luo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "gufo-acme>=0.4.0",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
]

[project.scripts]
fastcert = "fastcert:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
name  = "aliyun"
